Ultimos cambios reales

--- a/src/index.css
+++ b/src/index.css
@@ -446,8 +446,10 @@ body::selection {
 
 .report-section{ 
   width: 100%;
-  height: 100vh;
-  overflow-y: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 } 
 
 /* search */
@@ -484,9 +486,11 @@ body::selection {
   border-radius: 20px; 
   box-shadow: 3px 3px 12px -6px black; 
   padding: 20px; 
+  margin-bottom: 40px; 
   height: auto; 
   display: flex;
   flex-direction: column;
+
 }
 
 /* content user */
