--- a/src/index.css
+++ b/src/index.css
@@ -441,6 +441,7 @@ body::selection {
   display: flex;
   flex-direction: column; 
   align-items: center;
+  padding-top: 30px;
 } 
 
 /* report section */
