--- a/src/index.css
+++ b/src/index.css
@@ -448,10 +448,11 @@ body::selection {
 
 .report-section{ 
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center; 
+  overflow-y: auto;
 } 
 
 .content-public-report{
