--- a/src/index.css
+++ b/src/index.css
@@ -222,7 +222,7 @@ body::selection {
 }
 
 .sidebar-content{
-  width: 16%;
+  width: 270px;
   height: 100vh;
 }
 
@@ -446,7 +446,9 @@ body::selection {
 
 /* report section */
 
-.report-section{ 
+.report-section,
+.help-section,
+.profile-section{ 
   width: 100%;
   height: 100vh;
   display: flex;
@@ -691,80 +693,99 @@ body::selection {
 
 
 /*help section*/
-.help-section{ 
-  padding: 140px 290px 40px 640px; 
-  width: 100%; 
-  max-width: 100%;
-}
 
-.help-section .question-1,
-.help-section .question-2,
-.help-section .question-3,
-.help-section .question-4{
-  width: 100%; 
-  height: 130px; 
+.help-section .help-card{
+  width: 70%; 
+  height: 110px; 
   background: #8c72ae; 
-  margin: 0 auto; 
-  margin-bottom: 25px; 
   border-radius: 12px; 
   cursor: pointer; 
   box-shadow: 1px 1px 7px 0px black; 
   transition: all 1s; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 70px;
 }
 
-.help-section .question-1:hover{ background: #5a4674; }
-.help-section .question-2:hover{ background: #5a4674; }
-.help-section .question-3:hover{ background: #5a4674; }
-.help-section .question-4:hover{ background: #5a4674; }
+.help-section .help-card:hover{ background: #5a4674; }
+.help-section .help-card:hover{ background: #5a4674; }
+.help-section .help-card:hover{ background: #5a4674; }
+.help-section .help-card:hover{ background: #5a4674; }
 
-.help-section .question-1 p,
-.help-section .question-2 p,
-.help-section .question-3 p,
-.help-section .question-4 p{ 
-  font-size: 21px;
+.help-section .help-card p,
+.help-section .help-card p,
+.help-section .help-card p,
+.help-section .help-card p{ 
+  font-size: 18px;
   font-weight: 500; 
   text-align: center; 
   color: #ffffff; 
-  padding-top: 60px; 
+  font-weight: bold;
 }
 
 /* profile secction */
-.profile-section{ 
-  padding: 0 0 0 270px; 
-  width: 100%; 
-  max-width: 100%; 
+
+.profile-section .photo-profile{ 
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   padding-top: 30px;
 }
 
-.profile-section .profile-img{ 
-  width: 220px; 
-  margin: 0 auto; 
-  padding-top: 60px; 
+.profile-section .photo-profile figure{
+  width: 170px;
 }
 
-.profile-section .profile-img figure img{ 
-  border-radius: 100%; 
+.profile-section .photo-profile figure img{
+  border-radius: 100%;
 }
 
-.profile-section .table{ 
-  padding: 50px 100px; 
+.data-tables{
+  width: 80%;
 }
 
-.profile-section .table ul li{ 
-  margin: 40px; 
-  border-bottom: 2px solid #dbdbdb; 
-  padding-bottom: 5px; 
+.data-tables ul li{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid #ccc;
+  margin-bottom: 10px;
 }
 
-.profile-section .table ul li i{ 
-  color: #8c72ae; 
-  font-size: 21px; 
-  margin-right: 10px; 
+.data-tables ul li .left input{
+  outline: none;
+  border: none;
 }
 
-.profile-section .table ul li label{ 
-  font-size: 18px; 
-  color: #8d918e; 
+.data-tables ul li .left i{
+  font-size: 19px;
+  padding-right: 10px;
+  color: #A14D9B;
 }
+
+.data-tables ul li .right button{
+  border: 1px solid #A14D9B;
+  background: #ffffff;
+  padding: 8px;
+  border-radius: 100%;
+  color: #A14D9B;
+  transition: all 0.5s ease-in-out;
+  outline: none;
+  margin-bottom: 5px;
+}
+
+.data-tables ul li .right button:hover{
+  background: #A14D9B;
+  color: #ffffff;
+}
+
+.data-tables ul li .right button i{
+  font-size: 16px;
+  position: relative;
+  left: 2px;
+}
+
 
 
 /* MOBILE */
