--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -75,9 +75,9 @@
             }
 
             .btn-send{
-                padding-top: 10px;
+                margin: 10px 0 15px;
 
-                button{
+                a{
                     border: 2px solid #61dafb;
                     padding: 14px 80px;
                     border-radius: 6px;
@@ -86,6 +86,8 @@
                     font-weight: bold;
                     outline: none;
                     transition: all 0.5s ease-in-out;
+                    text-decoration: none;
+                    margin-bottom: 10px;
 
                     &:hover{
                         background: #fff;
