--- a/src/components/PostList/styles.scss
+++ b/src/components/PostList/styles.scss
@@ -1,19 +1,87 @@
 .container-reports{
     width: 80%;
     height: 80vh;
-    overflow: auto;
     padding: 0 10px;
 
     .upload-report{
         width: 100%;
-        height: 30vh;
+        height: 28vh;
         border-radius: 18px;
-        justify-content: center;
+        justify-content: flex-start;
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+        align-items: flex-start;
         box-shadow: 3px 3px 12px -6px black;
-        margin-top: 50px;
+        padding: 20px;
+        margin: 30px 0;
+
+        .top-report{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            height: 50px;
+    
+            .profile{
+                width: 100%;
+    
+                figure{
+                    img{
+                        width: 50px;
+                    }
+                }
+            }
+            .id{
+                width: 20%;
+                align-items: center;
+                display: flex;
+                color: gray;
+                font-weight: 600;
+                justify-content: flex-end;
+                padding-right: 25px;
+            }
+        }
+
+        .description-report{
+            width: 100%;
+            height: 80px;
+    
+            p{
+                width: 100%;
+                height: 100%;
+                padding: 20px;
+            }
+        }
+
+        .lower-items{
+            width: 100%;
+            // background: green;
+            height: 40px;
+            justify-content: flex-end;
+            display: flex;
+            padding: 10px;
+    
+            ul{
+                width: 50%;
+                display: flex;
+                justify-content: flex-end;
+    
+                li{
+                    margin: 10px;
+                    a{
+                        i{
+                            font-size: 21px;
+                            color: #1db7ea;
+                            transition: all 0.3s ease-in-out;
+    
+                            &:hover{
+                                color: #8B6CC0;
+                            }
+                        }
+                    }
+                    
+                }
+            }
+        }
     }
 }   
    
