--- a/src/components/PostMaker/styles.scss
+++ b/src/components/PostMaker/styles.scss
@@ -1,10 +1,102 @@
 .report{
     width: 78%;
-    height: 45vh;
+    height: 32vh;
     border-radius: 18px;
-    justify-content: center;
+    justify-content: flex-start;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     box-shadow: 3px 3px 12px -6px black;
+    padding: 20px;
+
+    .top-report{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        height: 50px;
+
+        .profile{
+            width: 100%;
+
+            figure{
+                img{
+                    width: 50px;
+                }
+            }
+        }
+        .id{
+            width: 20%;
+            align-items: center;
+            display: flex;
+            color: gray;
+            font-weight: 600;
+            justify-content: flex-end;
+            padding-right: 25px;
+        }
+    }
+
+    .description-report{
+        width: 100%;
+        height: 80px;
+
+        textarea{
+            width: 100%;
+            height: 100%;
+            resize: none;
+            border: none;
+            outline: none;
+            padding: 20px;
+        }
+    }
+
+    .lower-items{
+        width: 100%;
+        // background: green;
+        height: 40px;
+        justify-content: flex-end;
+        display: flex;
+        padding: 10px;
+
+        ul{
+            width: 50%;
+            display: flex;
+            justify-content: flex-end;
+            margin: 0 21px;
+
+
+            li{
+                margin: 10px;
+                a{
+                    i{
+                        font-size: 21px;
+                        color: #1db7ea;
+                        transition: all 0.3s ease-in-out;
+
+                        &:hover{
+                            color: #8B6CC0;
+                        }
+                    }
+                }
+                
+            }
+        }
+
+        .btn{
+            button{
+                padding: 9px 20px;
+                border-radius: 6px;
+                border: 2px solid #1db7ea;
+                background: #1db7ea;
+                color: #fff;
+                font-weight: bold;
+                transition: all 0.5s ease-in-out;
+
+                &:hover{
+                    background: #fff;
+                    color:#8B6CC0;
+                    border: 2px solid #8B6CC0;
+                }
+            }
+        }
+    }
 }
