--- a/src/index.css
+++ b/src/index.css
@@ -222,8 +222,8 @@ body::selection {
 }
 
 .sidebar-content{
-  /* width: 270px; */
-  /* height: 100vh; */
+  width: 270px;
+  height: 100vh;
 }
 
 .content-my-city .sidebar-content .login .card-login{ 
@@ -513,153 +513,6 @@ body::selection {
   height: 60px;
 }
 
-/* profile img */
-
-.profile-img{ 
-  display: flex;
-  flex-direction: row;
-  height: 70px;
-}
-
-.profile-img figure{ 
-  width: 50px;
-}
-
-.profile-img figure img{ 
-  width: 100%; 
-  border-radius: 100%; 
-}
-
-.profile-img p{ 
-  font-weight: 600; 
-  padding: 12px;
-}
-
-/* description */
-
-.description{ 
- width: 100%;
-}
-
-.description textarea{ 
-  width: 100%; 
-  resize: none; 
-  height: 90px; 
-  padding: 5px; 
-  border: none; 
-  outline: none; 
-  color: #9e9e9e; 
-  font-size: 18px; 
-  font-weight: 600; 
-  padding-left: 70px;
-}
-
-/* lower items */
-
-.items-lower{ 
-  width: 100%; 
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-.items-lower ul{
-  margin-bottom: 0;
-}
-
-/* id post */
-
-/*.id-post{ 
-
-}
-*/
-.id-post p{ 
-  font-size: 18px; 
-  font-weight: 600; 
-  color: #9e9e9e; 
-}
-
-/* description-post */
-
-.desciption-post{ 
- padding: 0 60px;
-}
-
-.report-section .public-report .post-photo{ 
-  padding-bottom: 50px;
-}
-
-.report-section .public-report .post-photo figure{ 
-  width: 50%; 
-  margin-left: 105px; 
-  cursor: pointer;
-}
-
-.report-section .public-report .post-photo figure img{ 
-  width: 100%; 
-  border-radius: 14px; 
-}
-
-.report-section .public-report .post-photo .localation{ 
-  padding: 10px 110px; 
-}
-
-.report-section .public-report .post-photo .localation i{ 
-  color: #08af3b; 
-  font-size: 20px; 
-}
-
-.report-section .public-report .post-photo .localation label{ 
-  color: #9e9e9e; 
-}
-
-
-
-.report-section .public-report .items-lower ul li{ 
-  float: left; 
-  margin: 10px; 
-}
-
-.report-section .public-report .items-lower ul li a i{ 
-  font-size: 24px; 
-}
-
-.report-section .public-report .items-lower ul li .btn-public{ 
-  padding: 5px 15px; 
-  border: 1px solid #A14D9B; 
-  background: #A14D9B; 
-  color: #ffffff; 
-  font-weight: bold; 
-  text-decoration: none;
-  border-radius: 14px; 
-  transition: all 1s ease; 
-}
-
-.report-section .public-report .items-lower ul li .btn-public:hover{ 
-  background-color: transparent; 
-  border: 1px solid #A14D9B; 
-  color: #A14D9B; 
-}
-
-.report-section .public-report .items-lower ul li a .settings{ 
-  color: #9e9e9e;
-}
-
-.report-section .public-report .items-lower ul li a .camera{ 
-  color: #00DFCF; 
-}
-
-.report-section .public-report .items-lower ul li a .map-marker{ 
-  color: #61EDAD; 
-}
-
-.report-section .public-report .items-lower ul li a .like{ 
-  color: #8c72ae; 
-}
-
-.report-section .public-report .items-lower ul li a .comments{ 
-  color: #7286e8; 
-}
 
 .redes-sociales{
   position: absolute;
