--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -110,6 +110,7 @@
                 a{
                     color: #61dafb;
                     text-decoration: none;
+                    padding-left: 5px;
 
                     &:hover{
                         text-decoration: underline;
