--- a/src/components/Register/styles.scss
+++ b/src/components/Register/styles.scss
@@ -55,15 +55,13 @@
 
         .login-form{
             width: 100%;
-            // height: 61vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 57vh;
             overflow-y: auto;
-            // overflow-y: auto;
-            // padding-top: 177px;
+            padding-top: 180px;
 
             .box{
                 display: flex;
