--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -78,14 +78,15 @@
                     box-shadow: rgba(0, 0, 0, 0.04) 0px 2px 13px 0px !important;
                     outline: none;
                     transition: all 1s ease-in;
-                    padding: 5px 10px
+                    padding: 5px 10px;
+                    background-color: #e7f2fe;
                 }
             }
 
             .btn-send{
                 margin: 10px 0 15px;
 
-                a{
+                p{
                     border: 2px solid #61dafb;
                     padding: 14px 80px;
                     border-radius: 6px;
