--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -48,7 +48,7 @@
             .line-title{
                 width: 50px;
                 height: 4px;
-                background-color: #61dafb;
+                background-color: #B79AB3;
             }
 
         }
@@ -87,10 +87,10 @@
                 margin: 10px 0 15px;
 
                 p{
-                    border: 2px solid #61dafb;
+                    border: 2px solid #B79AB3;
                     padding: 14px 80px;
                     border-radius: 6px;
-                    background: #61dafb;
+                    background: #B79AB3;
                     color: #fff;
                     font-weight: bold;
                     outline: none;
@@ -100,7 +100,7 @@
 
                     &:hover{
                         background: #fff;
-                        color: #61dafb;
+                        color: #575F72;
                     }
                 }
             }
@@ -109,7 +109,7 @@
                 padding-top: 5px;
 
                 a{
-                    color: #61dafb;
+                    color: #575F72;
                     text-decoration: none;
                     padding-left: 5px;
 
