--- a/src/index.css
+++ b/src/index.css
@@ -373,7 +373,7 @@ body::selection {
   /* transform: translate(-280px);  */
   width: 100%; 
   height: 100%; 
-  background: #1CB7EA; 
+  background: #192529; 
   display: flex;
   flex-direction: column; 
   transform: translate(0); 
