--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -34,7 +34,7 @@
             .line-title{
                 width: 50px;
                 height: 4px;
-                background-color: #61dafb;
+                background-color: #B79AB3;
             }
         }
         
@@ -53,3 +53,5 @@
         }
     }
 }
+
+
