--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~font-awesome/css/font-awesome.min.css";
+/* @import "~bootstrap/dist/css/bootstrap.min.css"; */
+/* @import "~font-awesome/css/font-awesome.min.css"; */
 @import url("https://use.fontawesome.com/releases/v5.7.2/css/all.css");
 
 /* #8c72ae color-violet */
@@ -97,11 +97,11 @@ body::selection {
   width: 16%;
   height: 100vh;
 }
-
+/* 
 .content-my-city{
   display: flex;
   flex-direction: row;
-}
+} */
 
 .content-my-city .sidebar-content .login .card-login{ 
   width: 530px; 
@@ -246,17 +246,6 @@ body::selection {
   flex-direction: row;
 }
 
-.sidebar-menu{ 
-  /* transform: translate(-280px);  */
-  width: 100%; 
-  height: 100%; 
-  background: #1CB7EA; 
-  display: flex;
-  flex-direction: column; 
-  /* transform: translate(0);  */
-  /* transition: all 0.3s ease;  */
-}
-
 .sidebar-menu.open{ 
   position: absolute; 
   left: 0; 
@@ -294,7 +283,7 @@ body::selection {
 .menu-mobile{ 
   width: 100%; 
   height: 70px; 
-  background: #025f80; 
+  /* background: */
   display: none; 
   position: fixed; 
 }
