--- a/src/components/PostList/styles.scss
+++ b/src/components/PostList/styles.scss
@@ -80,7 +80,7 @@
                             transition: all 0.3s ease-in-out;
     
                             &:hover{
-                                color: #575F72;;
+                                color: #575F72;
                             }
                         }
                     }
