--- a/src/components/RecoverPasswordComponent/styles.scss
+++ b/src/components/RecoverPasswordComponent/styles.scss
@@ -41,7 +41,7 @@
             .line-title{
                 width: 50px;
                 height: 4px;
-                background-color: #61dafb;
+                background-color: #B79AB3;
             }
 
         }
