--- a/src/components/Register/styles.scss
+++ b/src/components/Register/styles.scss
@@ -16,8 +16,8 @@
 
         .img-mancha{
             position: absolute;
-            width: 420px;
-            top: 0px;
+            width: 510px;
+            top: 20px;
         }
     }
 
@@ -48,7 +48,7 @@
             .line-title{
                 width: 50px;
                 height: 4px;
-                background-color: #61dafb;
+                background-color: #B79AB3;
             }
 
         }
