--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,7 +10,7 @@
 /* #08af3b color-green-medium */
 
 /*scrollbar*/
-
+/* 
 body::-webkit-scrollbar {
   width: 14px;
   height: 14px;
@@ -29,7 +29,7 @@ body::selection {
   background: #FFFFFF;
   color: #6c6fa9,;
   text-shadow: none;
-}
+} */
 
 @import url("https://use.fontawesome.com/releases/v5.7.2/css/all.css");
 
@@ -41,7 +41,7 @@ body::selection {
 
 /*scrollbar*/
 
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   width: 14px;
   height: 14px;
 }
@@ -59,184 +59,11 @@ body::selection {
   background: #FFFFFF;
   color: #6c6fa9,;
   text-shadow: none;
-}
-
-/* principal-nav */
-.principal-content{ 
-  background-color: #000000; 
-  width: 1920px; height: 937px;
-}
-
-.principal-content .box-left{ 
-  width: 50%; 
-  float: left; 
-}
-
-.principal-content .box-left figure{ 
-  width: 430px; 
-  margin: 120px 240px 0; 
-}
-
-.principal-content .box-right{ 
-  width: 50%; 
-  float: left; 
-}
-
-/* login */
-.content-my-city .sidebar-content .login{ 
-  margin-top: 170px; 
-  width: 100%;
-  height: 937px; 
-  /* background-image: url('../img/back-login.png');  */
-  background-size: cover; 
-  background-repeat: no-repeat; 
-  position: fixed; 
-}
+} */
 
 .sidebar-content{
   width: 16%;
   height: 100vh;
-}
-/* 
-.content-my-city{
-  display: flex;
-  flex-direction: row;
-} */
-
-.content-my-city .sidebar-content .login .card-login{ 
-  width: 530px; 
-  height: 560px; 
-  background: #025f80; 
-  margin: 0 auto; 
-  border-radius: 27px; 
-  padding: 10px; 
-}
-
-.content-my-city .sidebar-content .login .card-login .icon figure{ 
-  width: 170px; 
-  margin: 0 auto; 
-  padding-top: 10px;
-  margin-bottom: 30px; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register{ 
-  width: 90%; 
-  margin: 0 auto; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register input{ 
-  border: #ffffff;
-  background: #ffffff; 
-  margin-bottom: 30px; 
-  width: 390px; 
-  height: 55px; 
-  border-radius: 40px; 
-  outline: none; 
-  padding: 10px 20px 10px 50px; 
-  font-size: 20px; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register i{ 
-  position: relative; 
-  left: 46px; 
-  bottom: 12px; 
-  font-size: 24px; 
-  color: #575a5b; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register .btn-ingreso{ 
-  padding: 20px 157px; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register .btn-ingreso button{
-  padding: 12px 45px; 
-  border: none; 
-  border-radius: 30px; 
-  outline: none; 
-  background: #8c72ae; 
-  color: #ffffff; 
-  font-size: 16px; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register .lower-info a{ 
-  color: #ffffff; 
-  text-decoration: none; 
-}
-
-.content-my-city .sidebar-content .login .card-login .info-register .lower-info a p{ 
-  text-align: center; 
-  padding-bottom: 10px; 
-}
-
-/* register */
-.content-my-city .sidebar-content .register{ 
-  margin-top: 170px; 
-  width: 100%; 
-  height: 937px; 
-  /* background-image: url('./img/back-login.png');  */
-  background-size: cover; 
-  -repeat: no-repeat; 
-  position: fixed; 
-}
-
-.content-my-city .sidebar-content .register .card-register{ 
-  width: 530px; 
-  height: 560px;
-  background: #025f80; 
-  margin: 0 auto; 
-  border-radius: 27px; 
-  padding: 10px; 
-}
-
-.sidebar-content .register .card-register .icon figure{ 
-  width: 170px; 
-  margin: 0 auto; 
-  padding-top: 10px; 
-  margin-bottom: 30px; 
-}
-
-.sidebar-content .register .card-register .info-register{ 
-  width: 90%; 
-  margin: 0 auto; 
-}
-
-.sidebar-content .register .card-register .info-register input{ 
-  border: #ffffff; 
-  background: #025f80; 
-  margin-bottom: 30px; 
-  width: 390px;
-  height: 55px; 
-  outline: none; 
-  padding: 10px 20px 10px 50px; 
-  font-size: 20px; 
-  border-bottom: 3px solid #ffffff; 
-  color: #ffffff; 
-}
-
-.sidebar-content .register .card-register .info-register input::placeholder{ 
-  color: #FFFFFF; 
-}
-
-.sidebar-content .register .card-register .info-register i{ 
-  position: relative; 
-  left: 46px; 
-  bottom: 12px; 
-  font-size: 24px; 
-  color: #ffffff; 
-}
-
-.sidebar-content .register .card-register .info-register .btn-register{ 
-  padding: 20px 157px;
-}
-
-.sidebar-content .register .card-register .info-register .btn-register button{ 
-  padding: 12px 45px; 
-  border: none; 
-  border-radius: 30px; 
-  outline: none; 
-  background: #8c72ae; 
-  color: #ffffff; 
-  font-size: 16px; 
 }
 
 /* sidebar - menu */
@@ -283,7 +110,7 @@ body::selection {
 .menu-mobile{ 
   width: 100%; 
   height: 70px; 
-  /* background: */
+  background:#192529;
   display: none; 
   position: fixed; 
 }
@@ -544,45 +371,6 @@ body::selection {
 .redes-sociales ul li a:hover,
 .redes-sociales ul li a:active{
   border: 1px solid #1CB7EA;
-}
-
-
-/*help section*/
-.help-section{ 
-  padding: 140px 290px 40px 640px; 
-  width: 100%; 
-  max-width: 100%;
-}
-
-.help-section .question-1,
-.help-section .question-2,
-.help-section .question-3,
-.help-section .question-4{
-  width: 100%; 
-  height: 130px; 
-  background: #8c72ae; 
-  margin: 0 auto; 
-  margin-bottom: 25px; 
-  border-radius: 12px; 
-  cursor: pointer; 
-  box-shadow: 1px 1px 7px 0px black; 
-  transition: all 1s; 
-}
-
-.help-section .question-1:hover{ background: #5a4674; }
-.help-section .question-2:hover{ background: #5a4674; }
-.help-section .question-3:hover{ background: #5a4674; }
-.help-section .question-4:hover{ background: #5a4674; }
-
-.help-section .question-1 p,
-.help-section .question-2 p,
-.help-section .question-3 p,
-.help-section .question-4 p{ 
-  font-size: 21px;
-  font-weight: 500; 
-  text-align: center; 
-  color: #ffffff; 
-  padding-top: 60px; 
 }
 
 /* profile secction */
