--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -54,4 +54,11 @@
     }
 }
 
+// MOBILE
 
+@media screen and (max-width: 1200px){
+    .about-us-section{
+        width: 100%;
+        padding: 70px 60px 0;
+    }
+}
