--- a/src/components/CaseTracking/styles.scss
+++ b/src/components/CaseTracking/styles.scss
@@ -71,3 +71,12 @@
         }
     }
 }
+
+// MOIBLE
+
+@media screen and (max-width: 1200px){
+    .case-tracking-section{
+        width: 100%;
+        padding-top: 240px;
+    }
+}
