--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,3 @@
-
-/*scrollbar*/
-
-body::-webkit-scrollbar {
-  width: 14px;
-  height: 14px;
-}
-
-body::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(to right top, #6c6fa9, #4c6da1, #2d6a93, #106582, #025f70);;
-  border-radius: 10px;
-}
-
-body::-webkit-scrollbar-track {
-  background-color: #FFF;
-}
-
-body::selection {
-  background: #FFFFFF;
-  color: #6c6fa9,;
-  text-shadow: none;
-}
-
 @import url("https://use.fontawesome.com/releases/v5.7.2/css/all.css");
 
 /* #8c72ae color-violet */
@@ -30,7 +7,7 @@ body::selection {
 /* #08af3b color-green-medium */
 
 /*scrollbar*/
-
+/* 
 body::-webkit-scrollbar {
   width: 14px;
   height: 14px;
@@ -49,7 +26,7 @@ body::selection {
   background: #FFFFFF;
   color: #6c6fa9,;
   text-shadow: none;
-}
+} */
 
 
 .sidebar-menu{ 
@@ -198,77 +175,4 @@ body::selection {
 .profile-section .photo-profile figure img{
   border-radius: 100%;
 }
-
-.data-tables{
-  width: 80%;
-}
-
-.data-tables ul li{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 2px solid #ccc;
-  margin-bottom: 10px;
-}
-
-.data-tables ul li .left input{
-  outline: none;
-  border: none;
-}
-
-.data-tables ul li .left i{
-  font-size: 19px;
-  padding-right: 10px;
-  color: #A14D9B;
-}
-
-.data-tables ul li .right button{
-  border: 1px solid #A14D9B;
-  background: #ffffff;
-  padding: 8px;
-  border-radius: 100%;
-  color: #A14D9B;
-  transition: all 0.5s ease-in-out;
-  outline: none;
-  margin-bottom: 5px;
-}
-
-.data-tables ul li .right button:hover{
-  background: #A14D9B;
-  color: #ffffff;
-}
-
-.data-tables ul li .right button i{
-  font-size: 16px;
-  position: relative;
-  left: 2px;
-}
-
-
-
-/* MOBILE */
-
-@media screen and (max-width: 1780px) {
-
-  /* .report-section{ padding: 40px 290px 40px 560px; width: 100%; max-width: 100%; } */
-}
-
-@media screen and (max-width: 1780px) {
-
-  /* .report-section{ padding: 40px 190px 40px 400px; width: 100%; max-width: 100%; } */
-
-}
-
-@media screen and (max-width: 1280px) {
-
-  .content-my-city .sidebar-content .sidebar-menu{ position: relative; left: -360px; z-index: 9999; }
-  
-  .content-my-city .menu-mobile{ display: block; }
-
-  .report-section{ width: 80%; margin: 0 auto; }
-
-  .report-section{ padding: 30px; width: 100%; max-width: 100%; }
-
-}
-
 
