--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -85,6 +85,7 @@
 
             .btn-send{
                 margin: 10px 0 15px;
+                cursor: pointer;
 
                 p{
                     border: 2px solid #B79AB3;
