--- a/src/components/Register/styles.scss
+++ b/src/components/Register/styles.scss
@@ -89,10 +89,10 @@
                 padding-top: 10px;
 
                 button{
-                    border: 2px solid #61dafb;
+                    border: 2px solid #B79AB3;
                     padding: 14px 80px;
                     border-radius: 6px;
-                    background: #61dafb;
+                    background: #B79AB3;
                     color: #fff;
                     font-weight: bold;
                     outline: none;
@@ -100,7 +100,7 @@
 
                     &:hover{
                         background: #fff;
-                        color: #61dafb;
+                        color: #B79AB3;
                     }
                 }
             }
