--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -45,6 +45,11 @@
 
             img{
                 width: 340px;
+                transition: all 0.5s ease-in-out;
+                
+                &:hover{
+                    filter: grayscale(100%);
+                }
             }
         }
 
