--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -11,11 +11,13 @@
             display: flex;
             justify-content: center;
             flex-direction: column;
+            align-items: center;
 
             li{
                 display: flex;
                 flex-direction: row;
                 padding: 10px;
+                width: 80%;
 
                 .right{
                     
