--- a/src/components/HistoryData/styles.scss
+++ b/src/components/HistoryData/styles.scss
@@ -38,15 +38,18 @@
                             p{
                                 font-weight: bold;
                                 padding: 16px 10px;
+                                color: gray
                             }
                             .userName{
                                 font-weight: bold;
-                                padding: 16px 10px;
+                                padding: 8px 9px;
+                                font-size: 15px;
                             }
                             .report-state{
                                 font-weight: bold;
-                                padding: 16px 10px;
-                                margin-left: 20vh;
+                                padding: 30px 7px;
+                                margin-left: -44vh;
+                                font-size: 15px;
                             }
 
                         }
