--- a/src/components/LoginComponent/styles.scss
+++ b/src/components/LoginComponent/styles.scss
@@ -102,6 +102,7 @@
                     &:hover{
                         background: #fff;
                         color: #575F72;
+                        border: 2px solid #575F72;
                     }
                 }
             }
