--- a/src/components/PostList/styles.scss
+++ b/src/components/PostList/styles.scss
@@ -5,7 +5,7 @@
 
     .upload-report{
         width: 100%;
-        height: 28vh;
+        // height: 28vh;
         border-radius: 18px;
         justify-content: flex-start;
         display: flex;
