--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -5,6 +5,7 @@
     .data-tables{
         display: flex;
         justify-content: center;
+        margin-top: 100px;
 
         ul{
             width: 90%;
