--- a/src/components/RecoverPasswordComponent/styles.scss
+++ b/src/components/RecoverPasswordComponent/styles.scss
@@ -78,18 +78,22 @@
                 padding-top: 10px;
 
                 button{
-                    border: 2px solid #61dafb;
+                    border: 2px solid #B79AB3;
                     padding: 14px 80px;
                     border-radius: 6px;
-                    background: #61dafb;
+                    background: #B79AB3;
                     color: #fff;
                     font-weight: bold;
                     outline: none;
                     transition: all 0.5s ease-in-out;
+                    text-decoration: none;
+                    margin-bottom: 10px;
 
                     &:hover{
                         background: #fff;
-                        color: #61dafb;
+                        color: #575F72;
+                        border: 2px solid #575F72;
+
                     }
                 }
             }
