--- a/src/components/HistoryData/styles.scss
+++ b/src/components/HistoryData/styles.scss
@@ -42,14 +42,20 @@
                             }
                             .userName{
                                 font-weight: bold;
-                                padding: 8px 9px;
-                                font-size: 15px;
+                                padding: 2% 4%;
+                                font-size: 18px;
+                            }
+                            .date{
+                                font-weight: bold;
+                                padding: 2% 6px;
+                                font-size: 18px;
+                                margin-left: 4%;
                             }
                             .report-state{
                                 font-weight: bold;
-                                padding: 30px 7px;
-                                margin-left: -44vh;
-                                font-size: 15px;
+                                padding: 2% 7%;
+                                margin-left: 8%;
+                                font-size: 18px;
                             }
 
                         }
