--- a/src/components/Profile/styles.scss
+++ b/src/components/Profile/styles.scss
@@ -1,6 +1,18 @@
 .profile-section{
     width: 90%;
     height: 100vh;
+
+    .photo-profile{
+        width: 220px; 
+        margin: 0 auto; 
+        padding-top: 60px; 
+
+        figure{
+            img{
+                border-radius: 100%;
+            }
+        }
+    }
     
     .data-tables{
         display: flex;
