--- a/src/components/PostMaker/styles.scss
+++ b/src/components/PostMaker/styles.scss
@@ -165,5 +165,48 @@
         height: 540px;
         background: #fff;
         border-radius: 6px;
+        display: flex;
+
+        .form-left{
+            width: 50%;
+
+            .box-input{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                padding: 10px;
+
+                label{
+                    padding: 10px 0;
+                }
+                
+                input{
+                    width: 90%;
+                    height: 50px;
+                    border-radius: 6px;
+                    outline: none;
+                    border: none;
+                    box-shadow: 0px 0px 12px -2px rgba(186,186,186,0.66);
+                }
+            }
+        }
+
+        .form-right{
+            width: 50%;
+            
+            label{
+                padding: 10px 0;
+            }
+            
+            input{
+                width: 90%;
+                height: 50px;
+                border-radius: 6px;
+                outline: none;
+                border: none;
+                box-shadow: 0px 0px 12px -2px rgba(186,186,186,0.66);
+            }
+
+        }
     }
 }
