--- a/src/components/PostMaker/styles.scss
+++ b/src/components/PostMaker/styles.scss
@@ -162,10 +162,11 @@
 
     .modal{
         width: 700px;
-        height: 540px;
+        height: 430px;
         background: #fff;
         border-radius: 6px;
         display: flex;
+        padding: 40px 5px;
 
         .form-left{
             width: 50%;
@@ -187,24 +188,60 @@
                     outline: none;
                     border: none;
                     box-shadow: 0px 0px 12px -2px rgba(186,186,186,0.66);
+                    padding: 0 10px;
                 }
             }
         }
 
         .form-right{
             width: 50%;
-            
-            label{
-                padding: 10px 0;
+
+            .box-input{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                padding: 10px;
+
+                label{
+                    padding: 10px 0;
+                }
+                
+                textarea{
+                    width: 90%;
+                    height: 157px;
+                    border-radius: 6px;
+                    outline: none;
+                    border: none;
+                    box-shadow: 0px 0px 12px -2px rgba(186,186,186,0.66);
+                    resize: none;
+                    padding: 10px;
+                }
             }
-            
-            input{
-                width: 90%;
-                height: 50px;
-                border-radius: 6px;
-                outline: none;
-                border: none;
-                box-shadow: 0px 0px 12px -2px rgba(186,186,186,0.66);
+
+            .box-btn{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                padding: 10px;
+                margin-top: 40px;
+
+                button{
+                    width: 90%;
+                    height: 49px;
+                    background: #fff;
+                    border: 2px solid #B79AB3;
+                    border-radius: 6px;
+                    outline: none;
+                    color: #b79ab3;
+                    font-size: 18px;
+                    transition: all 0.5s ease-in-out;
+
+                    &:hover{
+                        background: #575F72;
+                        color: #fff;
+                        border: 2px solid #575F72;
+                    }
+                }
             }
 
         }
