--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200&display=swap');
+
+/* font-family: 'Source Sans Pro', sans-serif; */
+
+
 .content-my-city{ 
   width: 100%;
   display: flex;
