--- a/src/components/PostList/styles.scss
+++ b/src/components/PostList/styles.scss
@@ -69,6 +69,7 @@
                 width: 100%;
                 display: flex;
                 align-items: center;
+                padding: 0 16px;
     
                 i{
                     font-size: 18px;
@@ -78,7 +79,7 @@
                 p{
                     width: 100%;
                     height: 100%;
-                    padding: 20px;
+                    padding: 10px 5px;
                 }
             }
     
