--- a/src/components/HelpData/styles.scss
+++ b/src/components/HelpData/styles.scss
@@ -10,21 +10,19 @@
     .help-card{
         width: 70%;
         height: 120px;
-        background-image: linear-gradient(to left top, #a08497, #947c8c, #887481, #7c6c77, #70646c);        border-radius: 6px;
-        border: 1px solid #B79AB3;
         display: flex;
         justify-content: center;
         align-items: center;
         text-align: center;
         margin: 15px 0;
-        color: #ffffff;
+        color: #000;
         font-size: 18px;
-        // transition: all 0.5s ease-in-out;
-        -webkit-transition: background-image 0.2s ease-in-out;
-        transition: background-image 0.2s ease-in-out;
+        box-shadow: 1px 2px 6px -3px black;
+        border-radius: 8px;
+        transition: all 0.5s ease-in-out;
 
         &:hover{
-            background-image: linear-gradient(to top, #a08497, #947c8c, #887481, #7c6c77, #70646c);
+            box-shadow: 1px 2px 6px -3px #B79AB3;
         }
     }
 }
